(Format: Year/Month/Day)
Changes for 0.9.16:
*06/05/13:
   * Fixed some title redraw issues (Thanks _markt)
     WinClient.cc, Window.cc
   * Added support for _NET_WM_STATE_DEMANDS_ATTENTION . (Henrik)
     When this state is set fluxbox will start flashing 
     the titlebar and button in the toolbar. It will stop when the window
     is focused.
     The blink rate can be configured with the following resource:
     session.screen0.demandsAttentionTimeout: <timeout in milliseconds>
     Default value is 500.
     If the value is zero this feature will be disabled.
     Ewmh.hh/cc, IconbarTool.cc, AttentionNoticeHandler.hh/cc, Window.hh/cc
*06/05/07:
   * Handle EMWH window and icon titles, plus localise workspace names (Simon)
     - FbTk::FbWindow::textProperty now handles utf8 type, and always 
       returns UTF-8 encoded strings (for internal use)
     Ewmh.hh/cc Screen.cc WinClient.hh/cc WinClientUtil.cc Workspace.cc 
     WorkspaceNameTool.cc fluxbox.cc FbTk/... FbString.hh/cc FbWindow.cc
   * Handle UTF-8 strings properly (Simon)
     - still need to integrate EWMH strings properly (they are utf8)
     - still need to fix up TextBox
     FbTk/... FbString.hh/cc App.cc FOnt.hh/cc FontImp.hh Makefile.am 
       XFontImp.hh/cc XmbFontImp.hh/cc XftFontImp.hh/cc TextButton.cc
     Window.cc Xutil.hh/cc tests/testFont.cc
*06/05/01:
   * Make apps file keywords case insensitive, plus reload it (if newer)
     before save on close and remember menu events (Simon)
     Remember.cc
*06/04/26:
   * Fix resizing of client window when autogroup from apps (Simon)
     Window.cc
*06/04/25:
   * Cleanup unneeded headers (thanks Semushin Slava)
     FbAtoms.cc Slit.cc Keys.cc FocusControl.cc FbTk/App.cc
     util/fbrun/FbRun.cc
   * Fix occasional highlighting of menu nops+separators, sf.net patch 
     #1475268 (thanks Scott Kuhl; skuhl AT cs utah edu)
     FbTk/MenuSeparator.hh/cc FbTk/Menu.cc MenuCreator.cc
   * fbrun: Move the cursor to the end when tab completing