@@ -1,5 +1,8 @@
 (Format: Year/Month/Day)
 Changes for 0.9.16:
+*06/05/16:
+   * Fix bug with horizontal maximisation when quadrant resizing (Mathias)
+     Window.hh/cc
 *06/05/13:
    * Fixed some title redraw issues (Thanks _markt)
      WinClient.cc, Window.cc
